--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,9 +42,8 @@ body {
   
   .gender-text {
     background-color: #DAA520;
-    padding: 8px;
     position: absolute;
-    top: 5px;
+    top: 2em;
     left: 0;
    
   }
@@ -54,7 +53,8 @@ body {
     color: #FFF;
     padding: 10px;
     margin: 15px 10px 10px 10px; /* Increase top margin to 15px */
-    
+    padding-top: 2em;
+    font-size: 10px;
   }
   
   .shop-now-container {
