--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,83 +1,81 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  }
-  
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.card {
+  border: 1px solid #DAA520;
+  border-radius: 8px;
+  margin: 10px;
+  padding: 15px;
+  width: 250px;
+  background-color: #fff;
+  position: relative;
+}
+
+.card img {
+  max-width: 100%;
+  height: 280px; /* Set a specific height for the image */
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
+  border-radius: 4px;
+}
+
+.price {
+  display: block;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.tags {
+  display: block;
+  margin-top: 10px;
+  color: #000;
+}
+
+.gender-text {
+  background-color: #DAA520;
+  position: absolute;
+  top: 2em;
+  left: 0;
+}
+
+.shop-now-text {
+  background-color: #DAA520;
+  color: #FFF;
+  padding: 10px;
+  margin: 15px 10px 10px 10px;
+  padding-top: 2em;
+  font-size: 10px;
+}
+
+.shop-now-container {
+  position: relative;
+}
+
+.block-element {
+  display: block;
+  margin-bottom: 10px;
+}
+
+/* Media Queries for responsiveness */
+@media screen and (max-width: 768px) {
   .card {
-    border: 1px solid #DAA520;
-    border-radius: 8px;
-    margin: 10px;
-    padding: 15px;
-    width: 250px;
-    background-color: #fff;
-    position: relative;
+    width: 100%;
+    box-sizing: border-box;
   }
-  
-  .card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
-  }
-  
-  .price {
-    display: block;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  .tags {
-    display: block;
-    margin-top: 10px;
-    color: #000;
-    
-  }
-  
-  .gender-text {
-    background-color: #DAA520;
-    position: absolute;
-    top: 2em;
-    left: 0;
-   
-  }
-  
-  .shop-now-text {
-    background-color: #DAA520;
-    color: #FFF;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
     padding: 10px;
-    margin: 15px 10px 10px 10px; /* Increase top margin to 15px */
-    padding-top: 2em;
-    font-size: 10px;
   }
-  
-  .shop-now-container {
-    position: relative;
-  }
-  
-  .block-element {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  /* Media Queries for responsiveness */
-  @media screen and (max-width: 768px) {
-    .card {
-      width: 100%;
-      box-sizing: border-box;
-    }
-  }
-  
-  @media screen and (max-width: 480px) {
-    .container {
-      padding: 10px;
-    }
-  }
-  
+}
